# My_dormitory

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  docker-compose.yaml  main.cpp
Backend/: CMakeLists.txt  config.json  docker-compose.yaml  main.cpp
Backend/controller/: FileController.cc  NewsController.cc  NewsController.h  RepairController.cc  RepairController.h  ReserveWashMachineController.cc  S3Controller.cc  ThingController.cc  ThingController.h  UserController.cc  UserController.h  WashMachineController.cc  WashMachineController.h
Backend/model/: File.h  News.h  Repair.h  ReserveWashMachine.h  Thing.h  Tutor.h  User.h  WashMachine.h
Backend/repository/: FileRepository.cc  FileRepository.h  NewsRepository.cc  NewsRepository.h  RepairRepository.cc  RepairRepository.h  ReserveWashMachineRepository.cc  ReserveWashMachineRepository.h  ThingRepository.cc  ThingRepository.h  TutorRepository.cc  UserRepository.cc  UserRepository.h  WashMachineRepository.cc  WashMachineRepository.h
Backend/service/: FileService.cc  NewsService.cc  NewsService.h  RepairService.cc  RepairService.h  ReserveWashMachineService.cc  ReserveWashMachineService.h  S3Service.cc  S3Service.h  ThingService.cc  ThingService.h  UserService.cc  UserService.h  WashMachineService.cc
Backend/util/: Util.cc  Util.h
Frontend/: API_REQUESTS_DOCUMENTATION.md  CLEARTEXT_SOLUTION.md  LOGIN_API_SUMMARY.md  README.md  settings.gradle.kts
Frontend/app/: build.gradle.kts
Frontend/app/src/main/: AndroidManifest.xml
Frontend/app/src/main/java/com/example/mydormitory/: AddAnnouncementDialog.java  Announcement.java  AnnouncementAdapter.java  ApiService.java  AvitostanActivity.java  DocumentTemplate.java  DocumentTemplateAdapter.java  Documents.java  DocumentsActivity.java  DocumentsAdapter.java  FullScreenImageActivity.java  Guide.java  GuideActivity.java  GuideAdapter.java  GymActivity.java  LaundryActivity.java  LoginActivity.java  LoginExample.java  Machine.java  MainActivity.java  MyRepairsActivity.java  News.java  NewsAdapter.java  NewsForRepairManActivity.java  NewsForRepairManAdapter.java  RegisterActivity.java  RepairActivity.java  RepairRequestDialog.java  ReservationAdapter.java  StudyRoomActivity.java  TimeAdapter.java  TimeSlot.java  Type.java  User.java  addAvitoActivity.java  addDocumentsActivity.java  addGuideActivity.java  (+29 more)
Frontend/app/src/main/res/drawable/: add_photo_background.xml  button.xml  button_rounded.xml  category_tag_background.xml  date_button_selected_background.xml  duration_button_selected_background.xml  edit_text_background.xml  edittext_background.xml  guide_detail_background.xml  guide_item_background.xml  ic_add.xml  ic_arrow_right.xml  ic_calendar.xml  ic_camera.xml  ic_carpenter.xml  ic_clock.xml  ic_close.xml  ic_document.xml  ic_electrician.xml  ic_home.xml  ic_plumber.xml  ic_study_room.xml  machine_tab_background.xml  machine_tab_underline_background.xml  photo_preview_background.xml  repair_item_background.xml  spinner_background.xml  time_slot_unavailable_background.xml  user_avatar_background.xml
Frontend/app/src/main/res/layout/: activity_avitostan.xml  activity_documents.xml  activity_full_screen_image.xml  activity_guide.xml  activity_gym.xml  activity_laundry.xml  activity_login.xml  activity_main.xml  activity_register.xml  activity_repair.xml  activity_study_room.xml  add_avito.xml  add_documents.xml  add_guide.xml  add_news.xml  add_repair.xml  add_wash_machine.xml  all_documents.xml  all_widjet.xml  all_widjet_for_repairman.xml  avito_give.xml  avitostan.xml  avitostan_item.xml  dialog_add_announcement.xml  dialog_repair_request.xml  dialog_title.xml  dialog_title_repair.xml  documents.xml  documents_item.xml  guide.xml  guide_gym.xml  guide_item.xml  guide_study_room.xml  item_announcement.xml  item_compact_reservation.xml  item_time_slot.xml  login.xml  main.xml  mynewsforrepairman.xml  nav_header_main.xml  (+7 more)
Frontend/app/src/main/res/menu/: activity_main_drawer.xml
Frontend/app/src/main/res/values/: arraysForAvitostan.xml  arraysForAvitostan_view.xml  arraysForUsers.xml  colors.xml  strings.xml  themes.xml
Frontend/app/src/main/res/values-night/: themes.xml
Frontend/app/src/main/res/xml/: network_security_config.xml  network_security_config_debug.xml
Frontend/gradle/: libs.versions.toml
Frontend/gradle/wrapper/: gradle-wrapper.properties
Util/: Util.cc  Util.h
controller/: FileController.cc  FileController.h  NewsController.cc  NewsController.h  RepairController.cc  RepairController.h  ReserveWashMachineController.cc  ReserveWashMachineController.h  S3Controller.cc  S3Controller.h  ThingController.cc  ThingController.h  TutorController.cc  TutorController.h  UserController.cc  UserController.h  WashMachineController.cc  WashMachineController.h
model/: File.h  News.h  Repair.h  ReserveWashMachine.h  Thing.h  Tutor.h  User.h  WashMachine.h
repository/: FileRepository.cc  FileRepository.h  NewsRepository.cc  NewsRepository.h  RepairRepository.cc  RepairRepository.h  ReserveWashMachineRepository.cc  ReserveWashMachineRepository.h  ThingRepository.cc  ThingRepository.h  TutorRepository.cc  TutorRepository.h  UserRepository.cc  UserRepository.h  WashMachineRepository.cc  WashMachineRepository.h
service/: FileService.cc  FileService.h  NewsService.cc  NewsService.h  RepairService.cc  RepairService.h  ReserveWashMachineService.cc  ReserveWashMachineService.h  S3Service.cc  S3Service.h  ThingService.cc  ThingService.h  TutorService.cc  TutorService.h  UserService.cc  UserService.h  WashMachineService.cc  WashMachineService.h
